--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "socket.io": "^1.4.5"
   },
   "devDependencies": {
-    "jshint": "^2.9.2"
+    "chai": "^3.5.0",
+    "jshint": "^2.9.2",
+    "mocha": "^2.4.5"
   }
 }
